packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_capturing_fn_class.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 1046
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';

export const App = component$(() => {
	function hola() {
		console.log('hola');
	}
	class Thing {}
	class Other {}

	return $(() => {
		hola();
		new Thing();
		return (
			<div></div>
		)
	});
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAcjB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
const q_App_component_1_w0t0o3QMovU = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_1_w0t0o3QMovU"), "App_component_1_w0t0o3QMovU");
//
export const App_component_ckEPmXZlub0 = ()=>{
    return q_App_component_1_w0t0o3QMovU;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAG8B;IAO7B;AAOD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    246
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const App_component_1_w0t0o3QMovU = ()=>{
    hola();
    new Thing();
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2CAUU;IACR;IACA,IAAI;IACJ,qBACC,WAAC;AAEH\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    177,
    242
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'Thing' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'hola' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  }
]
